<resources>

    <!-- Global-->
    <string name="app_name">GatorsCupid</string>
    <string name="continue_button">Continue</string>
    <!-- Main Activity Resources-->

    <string name="email_alt_text">SFSU Email</string>
    <string name="password_alt_text">Password</string>
    <string name="signIn_button">SignIn</string>
    <string name="signUp_button">SignUp</string>
    <string-array name="domains_spinner">
        <item>@mail.sfsu.edu</item>
        <item>@sfsu.edu</item>
    </string-array>

    <string name="signup_request_dialogue_title">Signup-Request Status</string>
    <string name="signup_request_dialogue_message">A temporary password has been sent to verify your email. Please login using the same.</string>
    <string name="signin_request_message">Sign-in Succesful!</string>
    <string name="error_dialogue_title">Error</string>
    <string name="error_dialogue_message">Something went wrong</string>
    <string name="error_invalid_credentials">Invalid Credentials!</string>

    <!-- ProfileName Activity Resources-->
    <string name="name_title_text">What are you called?</string>
    <string name="name_hint">Enter Name</string>


    <!-- ProfileAge Activity Resources-->
    <string name="age_title_text">How old are you?</string>
    <string name="age_hint">YYYY-MM-DD</string>

    <!-- ProfileGender Activity Resources-->
    <string name="gender_title_text">I am a</string>
    <string name="gender_spinner_hint">Select your Gender</string>
    <string-array name="gender_spinner">
        <item>Man</item>
        <item>Woman</item>
        <item>Other</item>
    </string-array>

    <!-- Profile InterestedIn Activity Resources -->
    <string name="interestedin_title_text">I am interested in dating</string>
    <string name="interestedin_spinner_hint">Select your Gender</string>
    <string-array name="interestedin_spinner">
        <item>Men</item>
        <item>Women</item>
        <item>Both</item>
        <item>Others</item>
    </string-array>

    <!-- Profile Pic Activity Rescources -->
    <string name="pic_title_text">My best pic is</string>
    <string name="doneButton">Done</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Browse Profile Activity Resources -->
    <string name="swipe_like">👍</string>
    <string name="swipe_unlike">👎</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
