<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".view.ProfileGenderActivity">

    <TextView
        android:id="@+id/genderTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gender_title_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />


    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/gender_spinner_hint"
        android:entries="@array/gender_spinner"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTextview"
        app:layout_constraintVertical_bias="0.17000002" />


    <Button
    android:id="@+id/genderContinueButton"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/secondaryColor"
    android:text="@string/continue_button"
    android:textColor="@color/primaryColor"
    android:onClick="onContinueClick"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/genderSpinner"
    app:layout_constraintVertical_bias="0.75" />

</android.support.constraint.ConstraintLayout>